--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             </div>
         </div>
      </section>
+     <!-- marquee -->
     <marquee behavior="" direction="left" loop="-1" truespeed="truespeed" scrollamount="infinite">
         <img src="image/bussiness.img" alt="">
         <img src="image/brand.img " alt="">
@@ -88,6 +89,7 @@
         <img src="image/bussiness.img" alt="">
         <img src="image/ui.img" alt="">
     </marquee>
+    <!-- box-prsonal-info -->
     <section>
         <div class="col-xl-12 webflow">
             <div class="personal-head">
@@ -109,7 +111,7 @@
                         <div class="col-xl-6">
                             <div class="info">
                                 <h1 class="personal">Personal Info</h1>
-                                <p class="porro">Neque porro quisquam est, qui dolorem ipsum quia dolor sit consectetur, aliquam quaerats voluptatem. Ut enim ad minima veniam, exercitationem laboriosam, nisi ut aliquid ex ea autem velit esse quam nihil</p>
+                                <p class="porro">Neque porro quisquam est, qui dolorem ipsum quia dolor sit consectetur, aliquam quaerats voluptatem. enim ad minima veniam, exercitationem laboriosam, nisi ut aliquid ex ea autem velit esse quam nihil</p>
                                 <div class="row justify-between ">
                                     <div class="a-box">
                                         <div class="mail">
@@ -138,7 +140,7 @@
                                         </div>
                                     </div>
                                     <div class="a-box ">
-                                        <div class="mail app">
+                                        <div class="mail app fol">
                                             <h1>follow</h1>
                                         </div>
                                            <div class="app-row">
@@ -170,14 +172,120 @@
             </div>
         </div>
     </section>
+    <!-- marquee -->
     <div class="mark-yellow">
-        <marquee behavior="" direction="left" loop="-1" truespeed="truespeed" scrollamount="infinite">
+        <marquee behavior="" direction="right" loop="-1" truespeed="truespeed" scrollamount="infinite">
             <img src="image/worldwide.png" alt="">
             <img src="image/project.png " alt="">
             <img src="image/satisfied.png" alt="">
             <img src="image/team.png" alt="">
         </marquee>
     </div>
+    <!--  -->
+    <section class="award-section">
+        <div class="col-xl-12">
+            <div class="row justify-between">
+                <div class="col-xl-2"></div>
+                <div class="col-xl-8">
+                    <div class="award">
+                        <div class="award-box">
+                            <div class="row justify-between align-center">
+                                <div class="our">
+                                    <h1>Our Awards</h1>
+                                </div>
+                               <div class="work">
+                                    <p>view my work</p>
+                               </div>
+                            </div>
+                        </div>
+                        <div class="award-box">
+                            <div class="row justify-between align-center">
+                                    <div class="site">
+                                        <p>Site Of The Day</p>
+                                    </div>
+                                    <div class="animation">
+                                        <p>css & animation</p>
+                                    </div>
+                                    <div class="year">
+                                        <p>2018</p>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="award-box">
+                            <div class="row justify-between align-center">
+                                <div class="site">
+                                    <p>Best Business Model</p>
+                                </div>
+                                <div class="animation Strategy">
+                                    <p>	New Strategy</p>
+                                </div>
+                                <div class="year">
+                                    <p>2019</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="award-box">
+                            <div class="row justify-between align-center">
+                                <div class="site">
+                                    <p>motion graphic</p>
+                                </div>
+                                <div class="animation">
+                                    <p>	3D & Visual Effect</p>
+                                </div>
+                                <div class="year">
+                                    <p>2020</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="award-box">
+                            <div class="row justify-between align-center">
+                                <div class="site">
+                                    <p>video design</p>
+                                </div>
+                                <div class="animation">
+                                    <p>css & animation</p>
+                                </div>
+                                <div class="year">
+                                    <p>2022</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-xl-2"></div>
+            </div>
+        </div>
+    </section>
+    <!-- portfolio -->
+     <section>
+        <div class="portfolio">
+            <div class="project">
+                <div class="row ">
+                    <div class="dash-left"></div>
+                    <div class="complete ">
+                        <p>Complete Project</p>
+                    </div>
+                    <div class="dash-right"></div>
+                </div>
+            </div>
+            <div class="project-head">
+                <h1>Look at my portfolio and give me your feedback</h1>
+            </div>
+        </div>
+        <div class="col-xl-12">
+            <div class="row">
+                <div class="col-xl-2"></div>
+                <div class="col-xl-4">
+                    
+                </div>
+                <div class="col-xl-4">
+                    
+                </div>
+                <div class="col-xl-2"></div>
+            </div>
+        </div>
+     </section>
 </body>
 
 </html>
