--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matias-web-templete</title>
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="media/media.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -34,6 +35,7 @@
             </div>
         </div>
     </header>
+
     <!-- banner-content -->
     <section>
         <div class="banner-content col-xl-12">
@@ -64,7 +66,7 @@
                         <div class="video-btn-row">
                             <div class="row">
                                 <div class="zig-zag-row">
-                                    <img src="image/zig-zad-arrow.png" alt="">
+                                    <img src="image/zig-zad-arrow.png" class="alt=">
                                 </div>
                                 <div class="triangle-btn">
                                     <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="60px"
@@ -89,6 +91,7 @@
             </div>
         </div>
     </section>
+
     <!-- marquee -->
     <marquee behavior="" direction="left" loop="-1" truespeed="truespeed" scrollamount="infinite">
         <img src="image/bussiness.img" alt="">
@@ -99,14 +102,15 @@
         <img src="image/bussiness.img" alt="">
         <img src="image/ui.img" alt="">
     </marquee>
+
     <!-- box-prsonal-info -->
     <section>
         <div class="col-xl-12 webflow">
             <div class="personal-head">
                 <img src="image/star.png" alt="">
                 <div class="residing">
-                    <h1>I'm David Matias, I'm a Brand & Webflow Designer, Currently residing <br> in the lush Victoria
-                        Street London, Matias operates globally and is <br> ready to take on any design challenge.</h1>
+                    <p>I'm David Matias, I'm a Brand & Webflow Designer, Currently residing <br> in the lush Victoria
+                        Street London, Matias operates globally and is <br> ready to take on any design challenge.</p>
                 </div>
                 <div class="multiple-btns">
                     <button>about</button>
@@ -210,15 +214,19 @@
             </div>
         </div>
     </section>
+
     <!-- marquee -->
-    <div class="mark-yellow">
-        <marquee behavior="" direction="right" loop="-1" truespeed="truespeed" scrollamount="infinite">
-            <img src="image/worldwide.png" alt="">
-            <img src="image/project.png " alt="">
-            <img src="image/satisfied.png" alt="">
-            <img src="image/team.png" alt="">
-        </marquee>
-    </div>
+    <section>
+        <div class="mark-yellow">
+            <marquee behavior="" direction="right" loop="-1" truespeed="truespeed" scrollamount="infinite">
+                <img src="image/worldwide.png" alt="">
+                <img src="image/project.png " alt="">
+                <img src="image/satisfied.png" alt="">
+                <img src="image/team.png" alt="">
+            </marquee>
+        </div>
+    </section>
+
     <!-- award-section -->
     <section class="award-section">
         <div class="col-xl-12">
@@ -228,12 +236,12 @@
                     <div class="award">
                         <div class="award-box">
                             <div class="row justify-between align-center">
-                                <div class="our">
-                                    <h1>Our Awards</h1>
-                                </div>
-                                <div class="work">
-                                    <p>view my work</p>
-                                </div>
+                               <div class="our">
+                                <h1>our awards</h1>
+                               </div>
+                               <div class="port">
+                                <p>view my work</p>
+                               </div>
                             </div>
                         </div>
                         <div class="award-box">
@@ -295,13 +303,14 @@
             </div>
         </div>
     </section>
+
     <!-- portfolio -->
     <section>
         <div class="portfolio">
             <div class="project">
                 <div class="row ">
                     <div class="dash-left"></div>
-                    <div class="complete ">
+                    <div class="complete">
                         <p>Complete Project</p>
                     </div>
                     <div class="dash-right"></div>
@@ -470,6 +479,7 @@
             </div>
         </div>
     </section>
+
     <!-- need a project -->
     <section class="award-section">
         <div class="col-xl-12">
@@ -477,7 +487,7 @@
                 <div class="col-xl-2"></div>
                 <div class="col-xl-10">
                     <div class="desktop">
-                        <div class="row">
+                        <div class="row justify-between align-center">
                             <div class="col-xl-6">
                                 <div class="row">
                                     <div class="work">
@@ -538,6 +548,7 @@
             </div>
         </div>
     </section>
+
     <!-- provided services -->
     <section>
         <div class="col-xl-12">
@@ -687,6 +698,7 @@
             </div>
         </div>
     </section>
+
     <!-- working process -->
      <section class="award-section">
         <div class="col-xl-12">
@@ -802,6 +814,7 @@
             </div>
         </div>
      </section>
+
     <!-- Happy Words  -->
     <section>
         <div class="col-xl-12">
@@ -896,6 +909,7 @@
             </div>
         </div>
     </section>
+
     <!-- my blogs -->
     <section class="award-section">
         <div class="col-xl-12">
@@ -1016,6 +1030,7 @@
             </div>
         </div>
     </section>
+
     <!-- footor-top -->
     <footer class="top">
         <div class="col-xl-12">
@@ -1113,6 +1128,7 @@
             </div>
         </div>
     </footer>
+
     <!-- footor-bottom -->
     <footer class="award-section">
         <div class="row">
@@ -1136,14 +1152,12 @@
                             </div>
                         </div>
                         <div class="toparrow">
-                            <i>
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="28px" height="28px"
                                     fill="currentColor">
                                     <path fill-rule="evenodd"
                                         d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z">
                                     </path>
                                 </svg>
-                            </i>
                         </div>
                     </div>
                 </div>
@@ -1151,6 +1165,7 @@
             <div class="col-xl-2"></div>
         </div>
     </footer>
+
 </body>
 
 </html>
