--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
     <!-- marquee -->
 
     <marquee behavior="" direction="left" loop="-1" truespeed="truespeed" scrollamount="infinite">
-        <img src="image/bussiness.img" alt="">
+        <!-- <img src="image/bussiness.img" alt="">
         <img src="image/brand.img " alt="">
         <img src="image/bussiness.img" alt="">
         <img src="image/ui.img" alt="">
         <img src="image/application.img" alt="">
         <img src="image/bussiness.img" alt="">
-        <img src="image/ui.img" alt="">
+        <img src="image/ui.img" alt=""> -->
     </marquee>
 
     <!-- box-prsonal-info -->
